# lab-range-governance

./: .gitignore  LICENSE  README.md  function_app.py  pyproject.toml  requirements.txt
configs/: base.yaml
contracts/canonical/: lab_result_record.v1.json
contracts/reference_intervals/: reference_interval.v1.json
docs/: 03-authority-and-governance-rules.md  04-multi-tenant-boundaries.md  05-data-layers-and-storage-layout.md  06-reference-range-context-model.md
runbooks/tenants/TENANT_DEMO/reference_intervals/v1/: reference_intervals.jsonl
src/lrg/agent/: llm_router.py
src/lrg/common/: config.py  contract.py
src/lrg/governance/: reference_intervals.py  runbook_loader.py
src/lrg/ingest/csv/: row_to_canonical.py
src/lrg/ingest/fhir/: observation_to_canonical.py
src/lrg/ingest/hl7v2/: oru_to_canonical.py
src/lrg/tenancy/: tenant_context.py
tests/: test_contract_validation.py  test_csv_to_canonical.py  test_fhir_to_canonical.py  test_reference_interval_selection.py
