[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-range-governance"
version = "0.1.0"
description = "Multi-tenant Lab Result Normal-Range Governance system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[project.optional-dependencies]
dev = ["pytest>=9.0.0"]
